# nv-ingest

nemo_retriever/: pyproject.toml
nemo_retriever/docs/cli/: quickstart.md
nemo_retriever/harness/: HANDOFF.md  test_configs.yaml
nemo_retriever/src/nemo_retriever/adapters/cli/: main.py
nemo_retriever/src/nemo_retriever/graph/: beir_eval.py  recall_eval.py
nemo_retriever/src/nemo_retriever/harness/: config.py  history.py  run.py
nemo_retriever/src/nemo_retriever/harness/portal/: app.py
nemo_retriever/src/nemo_retriever/harness/portal/static/views/: datasets.jsx
nemo_retriever/src/nemo_retriever/pipeline/: __main__.py
nemo_retriever/src/nemo_retriever/skill_eval/: __init__.py  __main__.py  cli.py  dataset.py  report.py  runner.py  score.py
nemo_retriever/src/nemo_retriever/skill_eval/configs/: skill_eval.yaml
nemo_retriever/src/nemo_retriever/skill_eval/prompts/: setup_nl.j2  setup_slash.j2  trial_user_nl.j2  trial_user_slash.j2
nemo_retriever/tests/: test_graph_pipeline_cli.py  test_harness_config.py  test_harness_run.py
